[gd_scene format=3 uid="uid://4lbxiud0jbja"]

[ext_resource type="Script" uid="uid://dexk1h44me5ni" path="res://interface/window_main/board/BoardDisplay.gd" id="1_1hxrx"]
[ext_resource type="Material" uid="uid://cgrwo7btxfexx" path="res://assets/res/background_mat.tres" id="2_mxpwo"]
[ext_resource type="TileSet" uid="uid://c2fjaac6tfuak" path="res://assets/res/tileset.tres" id="2_u4vhm"]
[ext_resource type="Script" uid="uid://da7s0t81p7udb" path="res://interface/window_main/board/background/node.gd" id="3_lb0xt"]
[ext_resource type="Script" uid="uid://p626t6c8uiq2" path="res://interface/window_main/board/elements/tilemap.gd" id="4_pqxtx"]
[ext_resource type="Texture2D" uid="uid://c6bmny5thl2b3" path="res://assets/texture/texture.png" id="5_b0jsy"]
[ext_resource type="Material" uid="uid://c8b754gca03lt" path="res://assets/res/selected_element.tres" id="8_mxpwo"]
[ext_resource type="Script" uid="uid://5q6qkuoe6jj4" path="res://interface/window_main/board/elements/path.gd" id="11_si6el"]
[ext_resource type="Script" uid="uid://dab4t81slhs1u" path="res://interface/window_main/board/elements/path_follow.gd" id="12_grynd"]
[ext_resource type="Script" uid="uid://ccwpjhyp82sdc" path="res://interface/window_main/board/elements/moving.gd" id="12_hfesp"]

[sub_resource type="Curve2D" id="Curve2D_grynd"]

[node name="Root" type="Node2D" unique_id=9278442]
physics_interpolation_mode = 2
script = ExtResource("1_1hxrx")

[node name="Background" type="TileMapLayer" parent="." unique_id=1668120791]
material = ExtResource("2_mxpwo")
tile_set = ExtResource("2_u4vhm")
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false
script = ExtResource("3_lb0xt")

[node name="Elements" type="Node2D" parent="." unique_id=793058468]
script = ExtResource("4_pqxtx")

[node name="Path" type="Path2D" parent="." unique_id=1556779526]
visible = false
curve = SubResource("Curve2D_grynd")
script = ExtResource("11_si6el")

[node name="PathFollow" type="PathFollow2D" parent="Path" unique_id=814321159]
rotates = false
loop = false
script = ExtResource("12_grynd")

[node name="MovingElement" type="Sprite2D" parent="Path/PathFollow" unique_id=1648044407]
material = ExtResource("8_mxpwo")
texture = ExtResource("5_b0jsy")
region_enabled = true
script = ExtResource("12_hfesp")

[connection signal="element_cancel" from="." to="Elements" method="_on_element_cancel"]
[connection signal="element_select" from="." to="Elements" method="_on_element_select"]
[connection signal="target_select" from="." to="Path/PathFollow/MovingElement" method="_on_target_select"]
[connection signal="finished" from="Path" to="Path/PathFollow" method="_on_path_finished"]
[connection signal="finished" from="Path/PathFollow" to="Path" method="_on_path_follow_finished"]
[connection signal="finished" from="Path/PathFollow/MovingElement" to="Path" method="_on_moving_element_finished"]
